--- a/QuickHTML/QuickHTML.csproj
+++ b/QuickHTML/QuickHTML.csproj
@@ -76,6 +76,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="QuickHTMLExtensions.cs" />
     <Compile Include="QuickHTMLService.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
